Fixed bug in mobile response renderer. Adjusted css line-height to make things a little more readable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,7 @@ a img {
 
 p {
 	margin: 1em 0;
+	line-height: 20px;
 }
 
 .commentform fieldset {
